--- a/contracts/coordinator/package.json
+++ b/contracts/coordinator/package.json
@@ -70,7 +70,7 @@
         "@0x/base-contract": "^5.0.2",
         "@0x/contracts-asset-proxy": "^1.0.9",
         "@0x/contracts-erc20": "^1.0.9",
-        "@0x/contracts-exchange": "1.0.2",
+        "@0x/contracts-exchange": "^1.0.9",
         "@0x/contracts-exchange-libs": "^1.1.3",
         "@0x/contracts-utils": "^2.0.8",
         "@0x/order-utils": "^7.0.2",
